# pipelinewise-tap-mssql

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  MS_CDC_SETUP.md  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  push.yml
tap_mssql/: __init__.py  connection.py  tap_mssql
tap_mssql/sync_strategies/: common.py  full_table.py  incremental.py  log_based.py  logical.py
tests/: test_full_table_interruption.py  test_tap_mssql.py  test_tap_mysql.py  utils.py
