[tool.poetry]
name = "tap-mssql"
version = "2.1.1"
description = "A pipelinewise compatible tap for connecting Microsoft SQL Server"
authors = ["Rob Winters <wintersrd@gmail.com>"]
license = "GNU Affero"
readme = "README.md"
homepage = "https://robertwinters.nl"
repository = "https://github.com/wintersrd/pipelinewise-tap-mssql"
keywords = ["singer", "meltano", "pipelinewise", "mssql"]
classifiers = ["Development Status :: 5 - Production/Stable", "Topic :: Database"]

[tool.poetry.scripts]
tap-mssql = 'tap_mssql.__init__:main'

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=16.3.0"
pendulum = ">=1.2.0"
singer-python = "5.9.0"
# pymssql==2.2.8 broken: https://github.com/pymssql/pymssql/issues/833
pymssql = ">=2.1.1,!=2.2.8"
backoff = ">=1.8.0"

[tool.poetry.dev-dependencies]
docker = "^5.0.3"
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
mypy = "^0.971"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.7"
pytest-datafiles = "^2.0"
tox-poetry-installer = "^0.10.3"
tox-docker = "4.1.0"
pre-commit = "^2.17.0"
bumpversion = "^0.6.0"
tox = "^3.26.0"

[build-system]
requires = ["poetry==1.4.2"]
build-backend = "poetry.masonry.api"
